# aiw

./: .dockerignore  .env  .env.example  DEMO_SCRIPT.md  Dockerfile  README.md  mcp_config.json  requirements.txt  test_server.py
agent/: __init__.py  __main__.py  banking_agent.py  config.py  executor.py  prompts.py
agent/utils/: __init__.py  basic_agent.py  mcp_tools.py
banking_operation/: Dockerfile.txt  mcp_config.json  pyproject.toml
banking_operation/src/: banking_mcp_server.py
banking_operation/src/banking_operation_mcp_server/: data.py  validators.py
mcp_server/: __init__.py  __main__.py  server.py
pipelines/: ci-cd.yaml
